k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-boot-k8s-app
spec:
  replicas: 2  # At least 2 pods for session affinity to work
  selector:
    matchLabels:
      app: spring-boot-k8s-app
  template:
    metadata:
      labels:
        app: spring-boot-k8s-app
    spec:
      containers:
        - name: spring-boot-k8s-app
          image: thomasdarimont/demos/spring-boot-k8s-app:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "256Mi"
            limits:
              memory: "256Mi"
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
              tcpSocket:
                  port: 8080
              initialDelaySeconds: 5
              periodSeconds: 10
          livenessProbe:
              tcpSocket:
                  port: 8080
              initialDelaySeconds: 15
              periodSeconds: 20
